--- a/style.css
+++ b/style.css
@@ -57,3 +57,9 @@ body {
     background-color: rgb(167, 217, 255);
     transition-duration: 0.5s;
 }
+
+
+.result{
+    margin-top: 2px;
+    font-size: 35px;
+}
